--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,6 @@ jobs:
 
      #finally build your app with the latest command
       - name: Build and test with Maven
-        run: mvn clean verify --file ./TP1/API/pom.xml
+        run: mvn clean verify --file ./TP1/API/simple-api-student-main/simple-api-student-main/
+        
 
