--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,26 +2,29 @@ name: CI devops 2024
 on:
   #to begin you want to launch this job in main and develop
   push:
-    branches: main 
+    # on donne les branches à tester (la develop existe pas encore)
+    branches:
+      - main
   pull_request:
 
 jobs:
-  test-backend: 
+  test-backend:
     runs-on: ubuntu-22.04
     steps:
-     #checkout your github code using actions/checkout@v2.5.0
+      #checkout your github code using actions/checkout@v2.5.0
       - uses: actions/checkout@v2.5.0
 
-     #do the same with another action (actions/setup-java@v3) that enable to setup jdk 17
+      #do the same with another action (actions/setup-java@v3) that enable to setup jdk 17
       - name: Set up JDK 17
-      - uses: actions/setup-java@v2
+      # on utilise l'action setup java officiel
+        uses: actions/setup-java@v4
         with:
+          # on utilise le même jdk que le Dockerfile
           distribution: 'corretto'
+          # on précise la même version que le Dockerfile
           java-version: '17'
-         
 
-     #finally build your app with the latest command
+      #finally build your app with the latest command
       - name: Build and test with Maven
+        #on run maven clean verify dans le dossier du backend
         run: mvn clean verify --file ./TP1/API/simple-api-student-main/simple-api-student-main/pom.xml
-        
-
