--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: CI devops 2024
 on:
-  #to begin you want to launch this job in main and develop
+  # to begin you want to launch this job in main and develop
   push:
     # on donne les branches à tester (la develop existe pas encore)
     branches:
@@ -11,12 +11,12 @@ jobs:
   test-backend:
     runs-on: ubuntu-22.04
     steps:
-      #checkout your github code using actions/checkout@v2.5.0
+      # checkout your github code using actions/checkout@v2.5.0
       - uses: actions/checkout@v2.5.0
 
-      #do the same with another action (actions/setup-java@v3) that enable to setup jdk 17
+      # do the same with another action (actions/setup-java@v3) that enable to setup jdk 17
       - name: Set up JDK 17
-      # on utilise l'action setup java officiel
+        # on utilise l'action setup java officiel
         uses: actions/setup-java@v4
         with:
           # on utilise le même jdk que le Dockerfile
@@ -24,7 +24,50 @@ jobs:
           # on précise la même version que le Dockerfile
           java-version: '17'
 
-      #finally build your app with the latest command
+      # finally build your app with the latest command
       - name: Build and test with Maven
-        #on run maven clean verify dans le dossier du backend
+        # on run maven clean verify dans le dossier du backend
         run: mvn clean verify --file ./TP1/API/simple-api-student-main/simple-api-student-main/pom.xml
+
+# define job to build and publish docker image
+build-and-push-docker-image:
+  needs: test-backend
+  # run only when code is compiling and tests are passing
+  runs-on: ubuntu-22.04
+
+  # steps to perform in job
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v2.5.0
+        
+     
+    - name: Login to DockerHub
+      run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build image and push backend
+      uses: docker/build-push-action@v3
+      with:
+        # relative path to the place where source code with Dockerfile is located
+        context: ./simple-api
+        # Note: tags has to be all lower-case
+        tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-simple-api:latest
+        push: ${{ github.ref == 'refs/heads/main' }}          
+
+
+        
+   
+    # DO the same for database
+
+    - name: Build image and push database
+      uses: docker/build-push-action@v3
+      with:
+        context: ./TP1/Base
+        tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-simple-api-database:latest
+        push: ${{ github.ref == 'refs/heads/main' }}
+    # DO the same for httpd
+    - name: Build image and push httpd
+      uses: docker/build-push-action@v3
+      with:
+        context: ./TP1/Httpd
+        tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-simple-api-httpd:latest
+        push: ${{ github.ref == 'refs/heads/main' }}   
