--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,9 @@ jobs:
       # finally build your app with the latest command
       - name: Build and test with Maven
         # on run maven clean verify dans le dossier du backend
-        run: mvn clean verify --file ./TP1/API/simple-api-student-main/simple-api-student-main/pom.xml
+        run: mvn -B verify sonar:sonar -Dsonar.projectKey=sonardevopssebou_tp2 -Dsonar.organization=sonardevopssebou -Dsonar.login=${{ secrets.SONAR_TOKEN }}  --file ./TP1/API/simple-api-student-main/simple-api-student-main/pom.xml
+
+       # run: mvn clean verify --file ./TP1/API/simple-api-student-main/simple-api-student-main/pom.xml
 
   # define job to build and publish docker image
   build-and-push-docker-image:
