--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -11,7 +11,7 @@ jobs:
   
   # define job to build and publish docker image
   build-and-push-docker-image:
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
+    if: github.event_name == 'workflow_run' && github.event.workflow == 'Test Backend' && github.event.result == 'success'
     needs: test-backend
     # run only when code is compiling and tests are passing
     runs-on: ubuntu-22.04
