--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -12,7 +12,7 @@ jobs:
   # define job to build and publish docker image
   build-and-push-docker-image:
     needs: test-backend
-    if: github.event_name == 'workflow_run' && github.event.workflow == 'Test Backend' && github.event.result == 'success'
+    #if: github.event_name == 'workflow_run' && github.event.workflow == 'Test Backend' && github.event.result == 'success'
     
     # run only when code is compiling and tests are passing
     runs-on: ubuntu-22.04
