--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -1,14 +1,14 @@
 name: Build and Push Docker Image
 on:
   # to begin you want to launch this job in main and develop
-  push:
+  workflow_run:
     # on donne les branches à tester (la develop existe pas encore)
     branches:
       - main
   workflow: ["Test Backend"]
     types: 
       - completed
-  pull_request:
+  
 
 jobs:
   
