avec result conclusion

--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -9,8 +9,10 @@ on:
     types: 
       - completed
 
+
 jobs:
   build-and-push-docker-image:
+  if: github.event.result.conclusion == 'success'
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
