--- a/TP1/docker-compose.yml
+++ b/TP1/docker-compose.yml
@@ -7,7 +7,11 @@ services:
         
         networks:
           - app-network
-        env_file: .env
+        environment:
+          URL: jdbc:postgresql://pg:5432/db
+          USER: usr
+          PWD: pwd
+
         depends_on:
           - database
         container_name: api
@@ -20,6 +24,10 @@ services:
           context: ./Base
         networks:
           - app-network
+        environment:
+          POSTGRES_DB: db
+          POSTGRES_USER: usr
+          POSTGRES_PASSWORD: pwd
         volumes:
           - db-data:/var/lib/postgresql/data
         container_name: pg
