--- a/TP3/roles/database/tasks/main.yml
+++ b/TP3/roles/database/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Run database
   docker_container:
     name: database
-    image: carottealpha/tp-devops-simple-api-database
+    image: carottealpha/tp-devops-simple-api-database:latest
     volumes:
       - /var/lib/postgresql/data
     env: 
