--- a/TP1/Htpp/conf/httpd.conf
+++ b/TP1/Htpp/conf/httpd.conf
@@ -223,7 +223,13 @@ Group www-data
 # in which case these default settings will be overridden for the
 # virtual host being defined.
 #
-
+<VirtualHost *:80> 
+ProxyPreserveHost On 
+ProxyPass / http://api:8080/ 
+ProxyPassReverse / http://api:8080/ 
+</VirtualHost> 
+LoadModule proxy_module modules/mod_proxy.so 
+LoadModule proxy_http_module modules/mod_proxy_http.so 
 #
 # ServerAdmin: Your address, where problems with the server should be
 # e-mailed.  This address appears on some server-generated pages, such
