modife copy destination httpd.conf

--- a/TP3/roles/app/tasks/main.yml
+++ b/TP3/roles/app/tasks/main.yml
@@ -8,6 +8,8 @@
       URL: "{{ URL }}"
       USER: "{{ usr_name }}"
       PWD: "{{ pwd_usr }}"
+    networks:
+      - name: networkAPI
     recreate: yes
   vars:
     ansible_python_interpreter : /usr/bin/python3
