--- a/TP3/roles/network/tasks/main.yml
+++ b/TP3/roles/network/tasks/main.yml
@@ -1,12 +1,10 @@
 ---
 # tasks file for roles/network
 - name: Connect multiple containers to the network
-  community.docker.docker_network:
-    name: my-network
-    state: present
-    containers:
-      - database
-      - httpd
-      - api
+  docker_network:
+    name: networkAPI
+  vars:
+    ansible_python_interpreter : /usr/bin/python3
+
 
       
