--- a/TP3/roles/database/tasks/main.yml
+++ b/TP3/roles/database/tasks/main.yml
@@ -10,7 +10,8 @@
       POSTGRES_DB: "{{ db_name }}"
       POSTGRES_USER: "{{ usr_name }}"
       POSTGRES_PASSWORD: "{{ pwd_usr }}"
-   
+    networks:
+      - name: networkAPI
   vars:
     ansible_python_interpreter : /usr/bin/python3
 
