--- a/TP3/roles/app/tasks/main.yml
+++ b/TP3/roles/app/tasks/main.yml
@@ -11,6 +11,7 @@
     networks:
       - name: networkAPI
     recreate: yes
+    pull: yes
   vars:
     ansible_python_interpreter : /usr/bin/python3
 
