--- a/TP3/inventories/setup.yml
+++ b/TP3/inventories/setup.yml
@@ -2,10 +2,10 @@ all:
   vars:
     ansible_user: centos
     ansible_ssh_private_key_file: /home/carotee/cpe/id_rsa
-    db_name: db
-    pwd_usr: pwd
-    usr_name: usr
-    URL: jdbc:postgresql://database:5432/db
+    db_name: "db"
+    pwd_usr: "pwd"
+    usr_name: "usr"
+    URL: "jdbc:postgresql://database:5432/db"
   children:
     prod:
       hosts: sebastien.richard.takima.cloud
