Mise à jour du Dockerfile de base, du fichier de configuration httpd.conf et du fichier docker-compose.yml. Ajout du nom du serveur et modification des variables d'environnement pour la base de données.

--- a/TP1/docker-compose copy.yml
+++ b/TP1/docker-compose copy.yml
@@ -5,10 +5,10 @@ services:
         image: carottealpha/tp-devops-simple-api-database
         networks:
           - app-network
-        environment:
-          POSTGRES_DB: 'db'
-          POSTGRES_USER: 'usr'
-          POSTGRES_PASSWORD: 'pwd'
+        environment: 
+          POSTGRES_DB: db
+          POSTGRES_USER: usr
+          POSTGRES_PASSWORD: pwd
         volumes:
           - db-data:/var/lib/postgresql/data
         container_name: pg
@@ -19,9 +19,9 @@ services:
         networks:
           - app-network    
         environment:
-          URL: 'jdbc:postgresql://database:5432/db'
-          USER: 'usr'
-          PWD: 'pwd'      
+          URL: jdbc:postgresql://database:5432/db
+          USER: usr
+          PWD: pwd      
         depends_on:
           - database
         container_name: api
