--- a/TP1/Htpp/conf/httpd.conf
+++ b/TP1/Htpp/conf/httpd.conf
@@ -244,7 +244,7 @@ ServerAdmin you@example.com
 #
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
-ServerName localhost
+ServerName server.local
 
 #
 # Deny access to the entirety of your server's filesystem. You must
