--- a/TP1/docker-compose copy.yml
+++ b/TP1/docker-compose copy.yml
@@ -5,6 +5,7 @@ services:
         image: carottealpha/tp-devops-simple-api-database
         networks:
           - app-network
+  
         environment: 
           POSTGRES_DB: db
           POSTGRES_USER: usr
@@ -12,6 +13,8 @@ services:
         volumes:
           - db-data:/var/lib/postgresql/data
         container_name: pg
+        recreate: yes
+        pull: yes
         
 
     backend:
@@ -24,7 +27,10 @@ services:
           PWD: pwd      
         depends_on:
           - database
+          - httpd
         container_name: api
+        recreate: yes
+        pull: yes
         #TODO
 
     httpd:
@@ -33,9 +39,10 @@ services:
           - "80:80"
         networks:
           - app-network
-        depends_on:
-          - backend
+
         container_name: proxy
+        recreate: yes
+        pull: yes
         #TODO
 
     adminer:
@@ -47,6 +54,8 @@ services:
           - app-network
         depends_on:
           - database
+        recreate: yes
+        pull: yes
 
 
 networks:
