--- a/TP1/docker-compose.yml
+++ b/TP1/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         networks:
           - app-network
         environment:
-          URL: jdbc:postgresql://pg:5432/db
+          URL: jdbc:postgresql://datase:5432/db
           USER: usr
           PWD: pwd
 
