--- a/TP1/Base/Dockerfile
+++ b/TP1/Base/Dockerfile
@@ -1,10 +1,12 @@
 # our base image
 FROM postgres:14.1-alpine
    
-ENV POSTGRES_DB=db \
-   POSTGRES_USER=usr \
-   POSTGRES_PASSWORD=pwd
+#ENV POSTGRES_DB=db \
+#   POSTGRES_USER=usr \
+#   POSTGRES_PASSWORD=pwd
    
 # copy files required for the /docker-entrypoint-initdb.d to run
-COPY ./Script/CreateScheme.sql /docker-entrypoint-initdb.d/
-COPY ./Script/InsertData.sql /docker-entrypoint-initdb.d/
+#COPY ./Script/CreateScheme.sql /docker-entrypoint-initdb.d/
+#COPY ./Script/InsertData.sql /docker-entrypoint-initdb.d/
+# plus simple 
+COPY ./Script/* /docker-entrypoint-initdb.d/
