--- a/TP1/API/Dockerfile
+++ b/TP1/API/Dockerfile
@@ -1,9 +1,10 @@
+
 # Build
 FROM maven:3.8.6-amazoncorretto-17 AS myapp-build
 ENV MYAPP_HOME /opt/myapp
 WORKDIR $MYAPP_HOME
-COPY pom.xml .
-COPY src ./src
+COPY simple-api-student-main/simple-api-student-main/pom.xml .
+COPY simple-api-student-main/simple-api-student-main/src ./src
 RUN mvn package -DskipTests
 
 # Run
@@ -12,4 +13,8 @@ ENV MYAPP_HOME /opt/myapp
 WORKDIR $MYAPP_HOME
 COPY --from=myapp-build $MYAPP_HOME/target/*.jar $MYAPP_HOME/myapp.jar
 
+
 ENTRYPOINT java -jar myapp.jar
+
+
+
