--- a/TP1/API/Dockerfile
+++ b/TP1/API/Dockerfile
@@ -3,8 +3,8 @@
 FROM maven:3.8.6-amazoncorretto-17 AS myapp-build
 ENV MYAPP_HOME /opt/myapp
 WORKDIR $MYAPP_HOME
-COPY simple-api-student-main/simple-api-student-main/pom.xml .
-COPY simple-api-student-main/simple-api-student-main/src ./src
+COPY simple-api-student/pom.xml .
+COPY simple-api-student/src ./src
 RUN mvn package -DskipTests
 
 # Run
