Mise à jour des fichiers de configuration et des images Docker pour le front-end et le proxy. Ajout d'une nouvelle variable d'environnement pour l'URL de l'API. Réorganisation des réseaux Docker.

--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -39,3 +39,9 @@ jobs:
           context: ./TP1/Htpp/
           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-simple-api-httpd
           push: ${{ github.ref == 'refs/heads/main' }}
+      - name: Build image and push front
+        uses: docker/build-push-action@v3
+        with:
+          context: ./TP1/front/
+          tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-simple-api-front
+          push: ${{ github.ref == 'refs/heads/main' }}
