--- a/TP1/Htpp/conf/httpd.conf
+++ b/TP1/Htpp/conf/httpd.conf
@@ -225,8 +225,10 @@ Group www-data
 #
 <VirtualHost *:80> 
     ProxyPreserveHost On 
-    ProxyPass / http://api:8080/ 
-    ProxyPassReverse / http://api:8080/ 
+    ProxyPass /api/ http://api:8080/ 
+    ProxyPassReverse / http://api:8080/     
+    ProxyPass / http://frontend:80/ 
+    ProxyPassReverse / http://frontend:80/ 
 </VirtualHost> 
 LoadModule proxy_module modules/mod_proxy.so 
 LoadModule proxy_http_module modules/mod_proxy_http.so 
